# QickStart

./: .gitignore  MANIFEST.in  README.md  problem-1.ipynb  problem-2.ipynb  problem-3.ipynb  problem-4.ipynb  problem-5.ipynb  pyproject.toml  requirements.txt
graders/: gen-team-json.py  json-return-template.json  problem-structure.json
graders/problem_1/: answer.py  grader.py
graders/problem_2/: grader.py
graders/problem_3/: grader.py
graders/problem_4/: grader.py
graders/problem_5/: ans_gen_problem_5.ipynb  grader.py
problem-1/: problem.ipynb
problem-2/: grader.py  problem.ipynb
problem-2/tests/input/: task-2-0.txt  task-2-1.txt  task-2-2.txt  task-2-3.txt  task-2-7.txt  test-gen.py
problem-3/: problem.ipynb
problem-3/tests/inputs/: task-1-0.txt  task-1-1.txt  task-1-2.txt  (+13 more)
problem-4/: problem.ipynb
problem-4/tests/: task-1-0.txt  task-1-1.txt  task-1-2.txt  task-1-3.txt  task-1-4.txt  task-1-5.txt  task-1-6.txt  task-1-7.txt  task-2-0.txt  task-2-1.txt  task-2-2.txt  task-2-3.txt  task-2-4.txt  task-2-5.txt  task-2-6.txt  task-2-7.txt  task-2-8.txt  task-2-9.txt  task-3-0.txt  task-3-1.txt  task-3-2.txt  task-3-3.txt  task-3-4.txt  task-3-5.txt  task-3-6.txt  task-3-7.txt  task-3-8.txt  task-3-9.txt  test-gen-1.ipynb
problem-5/: problem.ipynb
problem-5/tests/: task-2-0.txt  task-2-1.txt  task-2-2.txt  task-2-3.txt  task-2-4.txt  task-2-5.txt  task-2-6.txt  task-2-7.txt  task-2-8.txt  task-2-9.txt  task-3-0.txt  task-3-1.txt  task-3-2.txt  task-3-3.txt  task-3-4.txt  task-3-5.txt  task-3-6.txt  task-3-7.txt  task-3-8.txt  task-3-9.txt  test-gen-1.ipynb  test-gen-2.ipynb
(+147 files in other folders)
